AddGames working by policy
