# dist/api.yml
@@ -5,7 +5,6 @@ info:
   version: 1.0.0
 tags:
   - name: Auth
-  - name: Judges
   - name: Games
   - name: Leagues
   - name: RoAF
@@ -61,21 +60,21 @@ paths:
       responses:
         "200":
           description: "the user has ben successfully logged out"
-  /judges/Register:
+  /RoAF/RegisterReferee:
     post:
       tags:
-        - Judges
-      summary: Make an existing user a judge
-      description: A logged in user will become a judge
+        - RoAF
+      summary: Make an existing user a Referee
+      description: A logged in user will become a Referee
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Judge"
+              $ref: "#/components/schemas/Referee"
       responses:
         "201":
-          description: Judge Created Successfully
+          description: Referee Created Successfully
         "400":
           description: wrong input parameters
   /leagues/getDetails:
@@ -93,44 +92,24 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/League"
-    
-  /leagues/addNewGame:
+  /leagues/AddGames:
     post:
-      tags: 
+      tags:
         - Leagues
-      summary: Add new game to the seesion and league
-      description: A JSON object contains all the detalis about the new game
+      summary: Add new games to the seesion and league
+      description: A JSON object contains league details
       requestBody:
         required: true
         content:
           application/json:
             type: object
             schema:
-              $ref: '#/components/schemas/addNewGame'
-      
-      responses:
-        '201':
-          description: Game Added
-        '401':
-          description: The teams cant play on that date, its taken
-
-  /RoAF/Register:
-    post:
-      tags:
-        - RoAF
-      summary: Make an existing user a RoFA
-      description: A logged in user will become a RoFA
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RoAF'
+              $ref: "#/components/schemas/addNewGame"
       responses:
         "201":
-          description: RoAF Created Successfully
-        "400":
-          description: wrong input parameters
+          description: Game Added
+        "401":
+          description: The teams cant play on that date, its taken
 
 components:
   schemas:
@@ -205,48 +184,14 @@ components:
     addNewGame:
       type: object
       properties:
-        homeTeam:
+        league_name:
           type: string
-          description: Home team name 
-          example: Hapoel Beer-Sheva
-        awayTeam:
-          type: string
-          description: Away team name
-          example: Macabi Haifa
-        date:
-          type: date
-          description: the game date
-          example: 22/2/21 00:14:00
-        location:
-          type: string
-          description: where the game will take place, the estadion name
-          example: Beer-Sheva estadion
+          description: League's name
+          example: Premier League
         season:
           type: string
-          description: the current season
-          example: 2020/2021
-        league:
-          type: int
-          description: league number
-          example: 1
-        mainJudge:
-          type: integer
-          description: judge ID
-          example: 1
-        judge1:
-          type: integer
-          description: judge ID
-          example: 3
-        judge2:
-          type: integer
-          description: judge ID
-          example: 4
-        judge3:
-          type: integer
-          description: judge ID
-          example: 5
-
-
+          description: season
+          example: 2021/2022
     PlayerPreview:
       type: object
       properties:
@@ -279,9 +224,13 @@ components:
           items:
             type: object
             $ref: "#/components/schemas/PlayerPreview"
-    Judge:
+    Referee:
       type: object
       properties:
+        user_id:
+          type: integer
+          description: user that will be assigned as a judge
+          example: 3
         leagueID:
           type: integer
           description: League ID
@@ -301,5 +250,3 @@ components:
           type: string
           description: current season name
           example: "2020/2021"
-    
-    
